--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,7 +1,6 @@
 .App {
   display: flex;
   flex-direction: column;
-  
 }
 
 .nav-container {
@@ -33,6 +32,7 @@ nav ul li:last-child {
   background-color:blueviolet;
   padding: 1%;
   text-align: center;
+  margin-top: 0%;
 }
 
 .cards{
@@ -98,6 +98,7 @@ nav ul li:last-child {
 
 .view{
   margin-left: 8%;
+  color:green;
 }
 
 /* styles for Application Form */
@@ -117,18 +118,52 @@ nav ul li:last-child {
 .Application-Form{
   text-align: center;
   background-color: blueviolet;
-  padding: 2%;
+  padding: 1%;
+  margin-top: 0%;
 }
  
 /* Job details page */
 .Job-Details-heading{
   text-align: center;
   background-color: blueviolet;
-  padding: 2%;
+  padding: 1.3%;
+  width: 1870px;
+  margin: 0%;
 }
 
 .JobDisplay{
-  padding-left: 30%;
- padding-right: 35%;
- padding-top: 5%;
+ background-image: url("https://www.bhmpics.com/downloads/white-and-purple-background/15.360_f_303562524_qfnwiptuffydgbr0adca0wj0pzujfw2w.jpg");
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover;
+ height: 875px;
+}
+
+.job-details-content{
+  background-color: lightgrey;
+  width: 500px;
+  border: 15px solid rgba(137, 43, 226, 0.781);
+  padding: 50px;
+  margin-left:650px;
+  margin-top: 100px;
+}
+
+.description{
+  text-align: justify;
+}
+
+.apply-link{
+  color: green;
+}
+
+.submit{
+  background-color: rgba(0, 128, 0, 0.544);
+}
+
+.main{
+  background-image: url("https://www.bhmpics.com/downloads/white-and-purple-background/15.360_f_303562524_qfnwiptuffydgbr0adca0wj0pzujfw2w.jpg");
+  background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover;
+ height: 875px;
 }
