--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -120,6 +120,7 @@ nav ul li:last-child {
   background-color: blueviolet;
   padding: 1%;
   margin-top: 0%;
+  padding-left: 10%;
 }
  
 /* Job details page */
@@ -136,7 +137,7 @@ nav ul li:last-child {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- height: 875px;
+ height: 650px;
 }
 
 .job-details-content{
@@ -144,8 +145,8 @@ nav ul li:last-child {
   width: 500px;
   border: 15px solid rgba(137, 43, 226, 0.781);
   padding: 50px;
-  margin-left:650px;
-  margin-top: 100px;
+  margin-left:500px;
+  margin-top: 40px;
 }
 
 .description{
@@ -165,5 +166,5 @@ nav ul li:last-child {
   background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- height: 875px;
+ height: 652px;
 }
