--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,6 +3,70 @@
   flex-direction: column;
 }
 
+.landing-container {
+  background-image: url("https://www.bhmpics.com/downloads/white-and-purple-background/15.360_f_303562524_qfnwiptuffydgbr0adca0wj0pzujfw2w.jpg");
+  height: 95vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+
+.landing-content{
+  margin-bottom: 20%;
+  text-align: center;
+  margin-left: 100px;
+}
+
+.land-bg {
+  background-image: url("https://storage.googleapis.com/joblist-content/hero-images/WFH.png");
+  width: 400px;
+  height: 300px;
+  margin-left: 200px;
+  margin-bottom: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  align-items: center;
+}
+
+
+.landing-content button {
+  padding: 10px 20px;
+  font-size: 1em;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 5%;
+  width: 180px;
+}
+
+.landing-content button:hover {
+  background-color: #2980b9;
+}
+
+.login-container {
+  background-color: lightgrey;
+  width: 200px;
+  border: 15px solid rgba(137, 43, 226, 0.781);
+  padding: 60px;
+  margin-left:600px;
+  margin-top: 100px;
+  text-align: center;
+}
+
+.login-container input {
+  width: 200px;
+  height: 20px;
+}
+
+.login-button{
+  background-color: green;
+}
+
 .nav-container {
   margin-top: 20px; 
   align-self: flex-end;
@@ -101,19 +165,17 @@ nav ul li:last-child {
   color:green;
 }
 
-/* styles for Application Form */
 
 .form{
   display: flex;
   flex-direction: column;
   text-align: left;
   margin-top: 5%;
-  margin-left: 20%;
 }
-
+/* 
 .submit{
   width: 80px;
-}
+} */
 
 .Application-Form{
   text-align: center;
@@ -123,11 +185,11 @@ nav ul li:last-child {
   padding-left: 10%;
 }
  
-/* Job details page */
 .Job-Details-heading{
-  text-align: center;
+  padding-left: 33%;
+  padding-top: 1%;
+  padding-bottom: 1%;
   background-color: blueviolet;
-  padding: 1.3%;
   width: 1870px;
   margin: 0%;
 }
@@ -137,7 +199,7 @@ nav ul li:last-child {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- height: 650px;
+ height: 95vh;
 }
 
 .job-details-content{
@@ -147,6 +209,7 @@ nav ul li:last-child {
   padding: 50px;
   margin-left:500px;
   margin-top: 40px;
+ 
 }
 
 .description{
@@ -166,5 +229,73 @@ nav ul li:last-child {
   background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- height: 652px;
+ height: 95vh;
+}
+
+.container-1{
+  margin: 50px auto;
+  padding: 2rem 1rem;
+  width: 390px;
+  border-radius: 10px;
+  background-color: aliceblue;
+  text-align: center;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+
+h1{
+  margin-bottom: 1.2rem;
+  font-size: 2rem;
+  color: #07001f;
+}
+form input{
+  width: 92%;
+  outline: none;
+  padding: 1px solid #fff;
+  padding: 12px 20px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  background: #e4e4e4;
+}
+button{
+  width: 90%;
+  border: none;
+  font-size: 1rem;
+  margin-top: 1.8rem;
+  padding: 10px 0;
+  border-radius: 20px;
+  outline: none;
+  color: #fff;
+  background: rgb(17, 67, 143);
+}
+button:hover{
+  background: rgba(17, 107, 143, 0.8);
+}
+input:focus{
+  border: 1px solid rgb(192, 192, 192);
+}
+.terms{
+  margin-top: 0.2rem;
+}
+.terms input{
+  height: 1em;
+  width: 1em;
+  vertical-align: middle;
+}
+.terms a{
+  text-decoration: none;
+}
+.member{
+  font-size: 1rem;
+  margin-top: 1.4rem;
+  color: #636363;
+}
+.member a{
+  text-decoration: none;
+}
+.recover{
+  text-align: right;
+  margin: 0.3rem 1.4rem 0 0;
+}
+.recover a{
+  text-decoration: none;
 }
