--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -199,7 +199,7 @@ nav ul li:last-child {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- height: 95vh;
+ height: 98vh;
 }
 
 .job-details-content{
@@ -209,7 +209,7 @@ nav ul li:last-child {
   padding: 50px;
   margin-left:500px;
   margin-top: 40px;
- 
+ height: 200px;
 }
 
 .description{
